--- a/Weather-Forecast/build.gradle
+++ b/Weather-Forecast/build.gradle
@@ -1,14 +1,26 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'buildgradle/dependencies.gradle'
+
+ext {
+    versionName                 = "1.0"
+    versionCode                 = 1
+
+    androidBuildToolsVersion    = "23.0.2"
+    androidMinSdkVersion        = 16
+    androidTargetSdkVersion     = 25
+
+    androidApplicationId        = "thearith.github.com.weatherforecast"
+}
 
 buildscript {
+
+    ext.gradle_version      = '3.0.0'
     
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        
+        classpath "com.android.tools.build:gradle:$gradle_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
