Added configuration for secret api key

--- a/Weather-Forecast/build.gradle
+++ b/Weather-Forecast/build.gradle
@@ -1,4 +1,5 @@
 apply from: 'buildgradle/dependencies.gradle'
+apply from: 'buildgradle/secret.gradle'
 
 ext {
     versionName                 = "1.0"
