--- a/Weather-Forecast/app/build.gradle
+++ b/Weather-Forecast/app/build.gradle
@@ -14,7 +14,14 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            buildConfigField "String", "DARK_SKY_API_KEY", "\"${globalConf.DARK_SKY_API_KEY}\""
+        }
+
         release {
+            buildConfigField "String", "DARK_SKY_API_KEY", "\"${globalConf.DARK_SKY_API_KEY}\""
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
