--- a/Weather-Forecast/buildgradle/dependencies.gradle
+++ b/Weather-Forecast/buildgradle/dependencies.gradle
@@ -40,7 +40,7 @@ ext {
             rxAndroid               : "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion",
             rxBinding               : "com.jakewharton.rxbinding2:rxbinding:$rxBindingVersion",
             rxRecyclerViewBinding   : "com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:$rxBindingVersion",
-            rxBindingV7Binding      : "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxBindingVersion",
+            rxBindingV4Binding      : "com.jakewharton.rxbinding2:rxbinding-support-v4:$rxBindingVersion",
 
             retrofit                : "com.squareup.retrofit2:retrofit:$retrofitVersion",
             okHttp3                 : "com.squareup.okhttp3:okhttp:$okHttp3Version",
