--- a/Weather-Forecast/app/src/main/AndroidManifest.xml
+++ b/Weather-Forecast/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".view.activities.details.DetailsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".view.activities.main.MainActivity" />
+        </activity>
+
     </application>
 
 </manifest>
