--- a/Weather-Forecast/app/build.gradle
+++ b/Weather-Forecast/app/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     androidTestImplementation(dependencies.testRunner) {
         exclude module: 'support-annotations'
     }
+    testImplementation dependencies.mockito
 }
